--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "d3": "^7.1.1",
+    "d3-force": "^3.0.0",
+    "deepmerge": "^4.2.2",
     "drei": "^2.2.21",
     "react": "^17.0.2",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
+    "react-force-graph": "^1.41.7",
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
+    "react-vis-force": "^0.3.1",
     "styled-components": "^5.3.1",
     "three": "^0.133.1",
     "web-vitals": "^1.1.2"
