--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-spring/three": "^9.3.0",
     "@react-three/drei": "^7.13.1",
     "@react-three/fiber": "^7.0.15",
+    "@sendgrid/mail": "^7.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,11 +15,13 @@
     "d3-force": "^3.0.0",
     "deepmerge": "^4.2.2",
     "drei": "^2.2.21",
+    "nodemailer": "^6.7.0",
     "react": "^17.0.2",
     "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-force-graph": "^1.41.7",
     "react-intersection-observer": "^8.32.1",
+    "react-recaptcha": "^2.3.10",
     "react-scripts": "4.0.3",
     "react-vis-force": "^0.3.1",
     "styled-components": "^5.3.1",
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
