--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "d3": "^7.1.1",
     "d3-force": "^3.0.0",
     "deepmerge": "^4.2.2",
